Create initial admin user
This patch adds ability to create keycloak initial admin user as described by [1].
Username is 'admin' and password same as one set for ovirt engine administrator panel during engine-setup.

[1] https://www.keycloak.org/docs/latest/server_admin/index.html#creating-the-account-remotely

Signed-off-by: Artur Socha <asocha@redhat.com>

--- a/ovirt-engine-keycloak.spec.in
+++ b/ovirt-engine-keycloak.spec.in
@@ -101,9 +101,7 @@ ln -sf %{_datadir}/%{name}/bin/client/keycloak-client-registration-cli-@KEYCLOAK
 
 %files setup
 %{ovirt_engine_data}/setup/ovirt_engine_setup/keycloak/
-%{ovirt_engine_data}/setup/plugins/*/ovirt-engine-keycloak/apache
-%{ovirt_engine_data}/setup/plugins/*/ovirt-engine-keycloak/ovirt-engine
-
+%{ovirt_engine_data}/setup/plugins/*/ovirt-engine-keycloak/
 
 %changelog
 * Wed Nov 10 2021 Artur Socha <asocha@redhat.com> 15.0.2-1
